change wallpaper and blur

--- a/dotfiles/dot_config/waypaper/config.ini
+++ b/dotfiles/dot_config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/hyprland-setup/wallpapers
-wallpaper = ~/hyprland-setup/wallpapers/4.jpg
+wallpaper = ~/hyprland-setup/wallpapers/Space-Nebula.png
 backend = hyprpaper
 monitors = All
 fill = fill
