--- a/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -80,19 +80,22 @@ windowrulev2 = size 50% 80%, class:^(.*gwenview)$
 
 # -------------------------------------------------------------------------
 
-# bordes
-windowrulev2 = noborder, fullscreenstate:* 1
-windowrulev2 = norounding, fullscreenstate:* 1
+# decoraciones
+#windowrulev2 = noborder, fullscreenstate:* 1
+#windowrulev2 = norounding, fullscreenstate:* 1
+windowrulev2 = noblur, class:^(jetbrains-.*)$
+windowrulev2 = noblur, class:^(.*codium)$
+windowrulev2 = opaque, class:^(jetbrains-.*)$
+windowrulev2 = opaque, class:^(.*codium)$
+
 
 # -------------------------------------------------------------------------
 
 # workspace 1
 $WORKSPACE=1
-windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$
+windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$ 
 windowrulev2 = workspace $WORKSPACE, class:^(.*codium)$
-windowrulev2 = noblur, onworkspace:$WORKSPACE
 #windowrulev2 = noanim, onworkspace:$WORKSPACE
-windowrulev2 = opaque, onworkspace:$WORKSPACE
 
 
 
