--- a/dotfiles/dot_config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/dot_config/hypr/conf/workspaces/default.conf
@@ -4,7 +4,7 @@
 $WORKSPACE=1
 workspace = $WORKSPACE, name:ide
 workspace = $WORKSPACE, defaultName:ide
-workspace = $WORKSPACE, gapsin:0, gapsout:0
+workspace = $WORKSPACE, gapsin:5, gapsout:5
 
 #workspace = $WORKSPACE, layoutopt:orientation:top
 
@@ -51,11 +51,6 @@ $WORKSPACE=9
 #workspace = $WORKSPACE, layoutopt:orientation:center
 workspace = $WORKSPACE, name:rrss
 workspace = $WORKSPACE, defaultName:rrss
-workspace = $WORKSPACE, border:false
-workspace = $WORKSPACE, gapsin:5, gapsout:0
-workspace = $WORKSPACE, shadow:false
-workspace = $WORKSPACE, decorate:false
-workspace = $WORKSPACE, rounding:false
 
 
 
@@ -70,6 +65,5 @@ workspace = $WORKSPACE, layoutopt:orientation:left
 workspace = $WORKSPACE, border:true
 workspace = $WORKSPACE, shadow:true
 workspace = $WORKSPACE, decorate:true
-workspace = $WORKSPACE, rounding:false
-workspace = $WORKSPACE, gapsin:0, gapsout:0
+workspace = $WORKSPACE, rounding:true
 workspace = $WORKSPACE, on-created-empty: kitty
