--- a/dotfiles/dot_config/hypr/conf/autostart.conf
+++ b/dotfiles/dot_config/hypr/conf/autostart.conf
@@ -3,6 +3,9 @@
 # Setup XDG for screen sharing and start waypaper and waybar
 exec-once = ~/.config/hypr/scripts/xdg.sh
 
+# Load Wallpaper
+exec-once = ~/.config/hypr/scripts/wallpaper-restore.sh
+
 # Start Polkit
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
@@ -29,6 +32,9 @@ exec-once = ~/.config/hypr/scripts/cleanup.sh
 
 # Load configuration from ML4W Hyprland Settings App
 exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
+
+# Dock
+exec-once = ~/.config/nwg-dock-hyprland/launch.sh
 
 # --------------------------------------------------------------------------
 
