--- a/dotfiles/dot_config/hypr/conf/ml4w.conf
+++ b/dotfiles/dot_config/hypr/conf/ml4w.conf
@@ -126,5 +126,7 @@ env = APPIMAGELAUNCHER_DISABLE,1
 env = OZONE_PLATFORM,wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
+# Python
+env = PYTHONPATH,/usr/lib/python3.12/site-packages:/usr/lib/python3.13/site-packages:$PYTHONPATH
 
 source = extra.conf
