--- a/dotfiles/dot_config/hypr/conf/monitors/1920x1080.conf
+++ b/dotfiles/dot_config/hypr/conf/monitors/1920x1080.conf
@@ -3,5 +3,5 @@
 # name: "1920x1080"
 # ----------------------------------------------------- 
 
-monitor=,1920x1080@60,auto,1
+monitor=,1920x1080,auto,1
 
