--- a/dotfiles/dot_config/hypr/hyprlock.conf
+++ b/dotfiles/dot_config/hypr/hyprlock.conf
@@ -48,7 +48,7 @@ input-field {
 label {
     monitor =
     #clock
-    text = cmd[update:1000] echo "$(date +"%I:%M %p")"
+    text = cmd[update:1000] echo "$TIME"
     color = rgba(200, 200, 200, 1.0)
     font_size = 55
     font_family = Fira Semibold
