--- a/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -9,6 +9,7 @@ windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
 windowrule = float,^(qalculate-gtk)$
 
+
 # Browser Picture in Picture
 windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = pin, title:^(Picture-in-Picture)$
@@ -77,6 +78,15 @@ windowrulev2 = float, class:^(.*gwenview)$
 windowrulev2 = center, class:^(.*gwenview)$
 windowrulev2 = size 50% 80%, class:^(.*gwenview)$
 
+#Shotwell
+$w_class=Shotwell
+windowrulev2 = float, class:^(.*$w_class)$
+windowrulev2 = center, class:^(.*$w_class)$
+windowrulev2 = size 50% 80%, class:^(.*$w_class)$
+$w_class=shotwell
+windowrulev2 = float, class:^(.*$w_class)$
+windowrulev2 = center, class:^(.*$w_class)$
+windowrulev2 = size 50% 80%, class:^(.*$w_class)$
 
 # -------------------------------------------------------------------------
 
