--- a/dotfiles/dot_config/hypr/conf/autostart.conf
+++ b/dotfiles/dot_config/hypr/conf/autostart.conf
@@ -39,7 +39,7 @@ exec-once = ~/.config/nwg-dock-hyprland/launch.sh
 # --------------------------------------------------------------------------
 
 # recargar hyprpm
-exec-once = hyprpm reload -n
+exec-once = hyprpm reload -n &
 
 # instalar socat
 #exec = sh ~/.config/hypr/scripts/hyprshade.sh
