--- a/dotfiles/dot_config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/dot_config/hypr/conf/keybindings/default.conf
@@ -142,8 +142,8 @@ bind = $mainMod SHIFT, M, fullscreen, 1
 bind = $mainMod SHIFT, F, layoutmsg, focusmaster
 bind = $mainMod SHIFT, F, fullscreen, 0
 
-bind = $mainMod, HOME, exec, $TERMINAL --class console-utils -e btop
-bind = $mainMod, END, exec, $TERMINAL --class console-utils -e pacseek
+bind = $mainMod, HOME, exec, sh ~/.config/ml4w/settings/system-monitor.sh
+bind = $mainMod, END, exec, sh ~/.config/ml4w/settings/software.sh
 bind = $mainMod, NEXT, layoutmsg, cyclenext
 bind = $mainMod, PRIOR, layoutmsg, cycleprev
 
