--- a/dotfiles/dot_config/hypr/conf/decorations/custom.conf
+++ b/dotfiles/dot_config/hypr/conf/decorations/custom.conf
@@ -16,7 +16,7 @@ decoration {
         new_optimizations = on
         ignore_opacity = true
         xray = true
-        blurls = waybar
+        #blurls = waybar
     }
 
     shadow {
