--- a/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -167,3 +167,7 @@ windowrulev2 = workspace $WORKSPACE, class:^(.*Spotify.*)$
 # workspace special
 $WORKSPACE=special:special
 windowrulev2 = fullscreen, onworkspace:name:$WORKSPACE
+
+
+# layerrules
+layerrule = blur,waybar
