--- a/dotfiles/dot_config/hypr/conf/ml4w.conf
+++ b/dotfiles/dot_config/hypr/conf/ml4w.conf
@@ -34,13 +34,15 @@ windowrulev2 = pin,class:(ml4w-welcome.py)
 # ML4W Settings App floating
 windowrulev2 = float,class:(com.ml4w.dotfilessettings)
 windowrulev2 = size 700 600,class:(com.ml4w.dotfilessettings)
-windowrulev2 = move 10% 20%,class:(com.ml4w.dotfilessettings)
+#windowrulev2 = move 10% 20%,class:(com.ml4w.dotfilessettings)
 windowrulev2 = pin,class:(com.ml4w.dotfilessettings)
+windowrulev2 = center,class:(com.ml4w.dotfilessettings)
 
 windowrulev2 = float,class:(ml4w-dotfiles-settings.py)
 windowrulev2 = size 400 500,class:(ml4w-dotfiles-settings.py)
-windowrulev2 = move 10% 20%,class:(ml4w-dotfiles-settings.py)
+#windowrulev2 = move 10% 20%,class:(ml4w-dotfiles-settings.py)
 windowrulev2 = pin,class:(ml4w-dotfiles-settings.py)
+windowrulev2 = center,class:(ml4w-dotfiles-settings.py)
 
 # ML4W Hyprland App floating
 windowrulev2 = float,class:(com.ml4w.hyprland.settings)
