--- a/dotfiles/dot_config/waypaper/config.ini
+++ b/dotfiles/dot_config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/hyprland-setup/wallpapers
 monitors = All
-wallpaper = ~/hyprland-setup/wallpapers/adwaita-l.jpg
+wallpaper = ~/hyprland-setup/wallpapers/Space-Nebula.png
 backend = hyprpaper
 fill = fill
 sort = name
