--- a/dotfiles/dot_config/hypr/conf/autostart.conf
+++ b/dotfiles/dot_config/hypr/conf/autostart.conf
@@ -6,6 +6,9 @@ exec-once = ~/.config/hypr/scripts/xdg.sh
 # Load Wallpaper
 exec-once = ~/.config/hypr/scripts/wallpaper-restore.sh
 
+# Listen wallpaper changes
+exec=once = nohup sh ~/hyprland-setup/scripts/listen_wallpaper_change.sh &
+
 # Start Polkit
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
