--- a/dotfiles/dot_config/hypr/conf/custom.conf
+++ b/dotfiles/dot_config/hypr/conf/custom.conf
@@ -23,6 +23,7 @@ env = SDL_VIDEODRIVER,wayland
 # Source para cada carpeta
 source = plugin.conf
 source = workspace.conf
+source = extra.conf
 
 # Blur for waybar
 layerrule = blur, waybar
