--- a/dotfiles/dot_config/hypr/conf/keyboard.conf
+++ b/dotfiles/dot_config/hypr/conf/keyboard.conf
@@ -1,11 +1,26 @@
-# keyboard abd touchpad
+
+# ----------------------------------------------------- 
+
+# Keyboard Layout
+
+# https://wiki.hyprland.org/Configuring/Variables/#input
+
+# -----------------------------------------------------
+
+# keyboard and touchpad
 input {
-    kb_layout = us,latam
+    kb_layout = us, latam
     kb_variant =
     kb_model =
     kb_options = grp:alt_space_toggle
     numlock_by_default = true
     mouse_refocus = false
+
+    # For United States
+    # kb_layout = us
+    # kb_variant = intl
+    # kb_model = pc105
+    # kb_options =
 
     follow_mouse = 1
     touchpad {
@@ -16,4 +31,21 @@ input {
         scroll_factor = 1.0  # Touchpad scroll factor
     }
     sensitivity = 0 # Pointer speed: -1.0 - 1.0, 0 means no modification.
+}
+
+gestures {
+  workspace_swipe = true
+  workspace_swipe_fingers = 3
+  workspace_swipe_distance = 500
+  workspace_swipe_invert = true
+  workspace_swipe_min_speed_to_force = 30
+  workspace_swipe_cancel_ratio = 0.5
+  workspace_swipe_create_new = true 
+  workspace_swipe_forever = true
+}
+
+binds {
+  workspace_back_and_forth = false
+  allow_workspace_cycles = true
+  pass_mouse_when_bound = false
 }
