changed whatsapp and telegram rules

--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -1,9 +1,6 @@
 # reglas de ventana
 
 # default start
-#windowrule = tile,^(Microsoft-edge)$
-#windowrule = tile,^(Brave-browser)$
-#windowrule = tile,^(Chromium)$
 windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
@@ -18,24 +15,12 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
 # --------------------------------------------------------------------------------
 
-#windowrulev2 = float, class:^(.*.*)$
-#windowrulev2 = minsize 50% 50%, class:^(.*.*)$
-#windowrulev2 = center, class:^(.*.*)$
-#windowrulev2 = focusonactivate, class:^(.*.*)$
-
-# maxsize de la ventana cuando esta en modo flotante
-# no se usara el minsize hasta que pueda diferenciar entre ventanas flotantes para hint y normales
-#windowrulev2 = minsize 700 500, floating:1
-
-# max size da problemas con los menu de opciones del ide
-#windowrulev2 = maxsize 1400 800, floating:1
-
 
 # ------------------------------------------------------------------------
 # tipos de visualizacion
 #windowrulev2 = fullscreen, class:^(kitty)$
-windowrulev2 = fullscreen, class:^(whatsdesk)$
-windowrulev2 = fullscreen, class:^(.*telegram.*)$
+#windowrulev2 = fullscreen, class:^(whatsdesk)$
+#windowrulev2 = fullscreen, class:^(.*telegram.*)$
 windowrulev2 = fullscreen, class:^(.*Spotify.*)$
 windowrulev2 = fullscreen, class:^(.*Postman.*)$
 windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
@@ -43,10 +28,6 @@ windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
 
 windowrulev2 = maximize, class:^(.*chrome.*)$
 windowrulev2 = maximize, class:^(Brave.*)$
-#windowrulev2 = maximize, class:^(jetbrains-.*)$
-#windowrulev2 = maximize, class:^(.*codium)$
-#windowrulev2 = maximize, class:^(.*Nautilus)$
-
 
 # desktop portal
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
@@ -88,11 +69,24 @@ windowrulev2 = float, class:^(.*$w_class)$
 windowrulev2 = center, class:^(.*$w_class)$
 windowrulev2 = size 50% 80%, class:^(.*$w_class)$
 
+
+#Whatsdesk
+$w_class=whatsdesk
+windowrulev2 = float, class:^(.*$w_class)$
+windowrulev2 = center, class:^(.*$w_class)$
+windowrulev2 = size 70% 90%, class:^(.*$w_class)$
+windowrulev2 = move onscreen 15% 0%, class:^(.*$w_class)$
+
+#Telegram
+$w_class=telegram
+windowrulev2 = float, class:^(.*$w_class.*)$
+windowrulev2 = center, class:^(.*$w_class.*)$
+windowrulev2 = size 70% 90%, class:^(.*$w_class.*)$
+windowrulev2 = move onscreen 15% 0%, class:^(.*$w_class.*)$
+
 # -------------------------------------------------------------------------
 
 # decoraciones
-#windowrulev2 = noborder, fullscreenstate:* 1
-#windowrulev2 = norounding, fullscreenstate:* 1
 windowrulev2 = noblur, class:^(jetbrains-.*)$
 windowrulev2 = noblur, class:^(.*codium)$
 windowrulev2 = opaque, class:^(jetbrains-.*)$
@@ -105,7 +99,6 @@ windowrulev2 = opaque, class:^(.*codium)$
 $WORKSPACE=1
 windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$ 
 windowrulev2 = workspace $WORKSPACE, class:^(.*codium)$
-#windowrulev2 = noanim, onworkspace:$WORKSPACE
 
 
 
@@ -113,6 +106,7 @@ windowrulev2 = workspace $WORKSPACE, class:^(.*codium)$
 $WORKSPACE=2
 windowrulev2 = workspace $WORKSPACE, class:^(.*Postman.*)$
 windowrulev2 = workspace $WORKSPACE, class:^(.*HTTPie.*)$
+
 
 
 # workspace 3
@@ -139,7 +133,6 @@ $WORKSPACE=6
 
 # workspace 7
 $WORKSPACE=7
-#windowrulev2 = float, onworkspace:$WORKSPACE
 
 
 
