--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -5,7 +5,6 @@ $WORKSPACE=1
 workspace = $WORKSPACE, name:ide
 workspace = $WORKSPACE, defaultName:ide
 workspace = $WORKSPACE, gapsin:5, gapsout:5
-
 #workspace = $WORKSPACE, layoutopt:orientation:top
 
 
@@ -48,7 +47,7 @@ $WORKSPACE=8
 
 # workspace 9
 $WORKSPACE=9
-#workspace = $WORKSPACE, layoutopt:orientation:center
+workspace = $WORKSPACE, layoutopt:orientation:left
 workspace = $WORKSPACE, name:rrss
 workspace = $WORKSPACE, defaultName:rrss
 
