error fixes and improved listen_wallpaper_change script, now it changes color scheme automatically after change wallpaper

--- a/dotfiles/.config/hypr/conf/autostart.conf
+++ b/dotfiles/.config/hypr/conf/autostart.conf
@@ -11,7 +11,7 @@ exec-once = ~/.config/hypr/scripts/xdg.sh
 exec-once = ~/.config/hypr/scripts/wallpaper-restore.sh
 
 # Listen wallpaper changes
-exec=once = nohup sh ~/hyprland-setup/scripts/listen_wallpaper_change.sh &
+exec-once = nohup sh ~/hyprland-setup/scripts/listen_wallpaper_change.sh &
 
 # Start Polkit
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
