change hyprland style and created new exotic-modern-simple theme

--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -35,7 +35,7 @@ bind = $mainMod CTRL, RETURN, exec, pkill rofi || rofi -show drun -replace -i # 
 bind = ALT, R, exec, ~/.config/waybar/launch.sh # Reload waybar
 bind = ALT, W, exec, ~/.config/waybar/toggle.sh # Toggle waybar
 bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh # Open clipboard manager
-bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh # Open waybar theme switcher
+bind = $mainMod SHIFT, T, exec, ~/.config/waybar/themeswitcher.sh # Open waybar theme switcher
 #bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
 bind = $mainMod SHIFT, H, exec, $HYPRSCRIPTS/hyprshade.sh # Toggle screenshader
 bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh # Toggle game mode
