--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -4,7 +4,7 @@
 $WORKSPACE=1
 workspace = $WORKSPACE, name:ide
 workspace = $WORKSPACE, defaultName:ide
-workspace = $WORKSPACE, gapsin:5, gapsout:5
+workspace = $WORKSPACE, gapsin:5, gapsout:0
 #workspace = $WORKSPACE, layoutopt:orientation:top
 
 
@@ -61,8 +61,8 @@ $WORKSPACE=10
 # workspace special
 $WORKSPACE=special:special
 workspace = $WORKSPACE, layoutopt:orientation:left
-workspace = $WORKSPACE, border:true
-workspace = $WORKSPACE, shadow:true
-workspace = $WORKSPACE, decorate:true
-workspace = $WORKSPACE, rounding:true
+#workspace = $WORKSPACE, border:true
+#workspace = $WORKSPACE, shadow:true
+#workspace = $WORKSPACE, decorate:true
+#workspace = $WORKSPACE, rounding:true
 workspace = $WORKSPACE, on-created-empty: kitty
