changed design and waybar setup according to my preferences

--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -36,7 +36,7 @@ bind = ALT, R, exec, ~/.config/waybar/launch.sh # Reload waybar
 bind = ALT, W, exec, ~/.config/waybar/toggle.sh # Toggle waybar
 bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh # Open clipboard manager
 bind = $mainMod SHIFT, T, exec, ~/.config/waybar/themeswitcher.sh # Open waybar theme switcher
-#bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
+bind = $mainMod, S, exec, com.ml4w.hyprland.settings # Open ML4W Dotfiles Settings app
 bind = $mainMod SHIFT, H, exec, $HYPRSCRIPTS/hyprshade.sh # Toggle screenshader
 bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh # Toggle game mode
 bind = $mainMod, Z, exec, missioncenter # Open Mission Center
@@ -148,13 +148,16 @@ bind = $mainMod, NEXT, layoutmsg, cyclenext
 bind = $mainMod, PRIOR, layoutmsg, cycleprev
 
 bind = ALT, M, layoutmsg, focusmaster
-bind = ALT, up, layoutmsg, addmaster
-bind = ALT, down, layoutmsg, removemaster
+bind = ALT SHIFT, up, layoutmsg, addmaster
+bind = ALT SHIFT, down, layoutmsg, removemaster
 #bind = ALT, W, exec, killall waybar && pkill waybar
 
 bind = ALT SHIFT, 5, layoutmsg, mfact exact 0.5
 bind = ALT SHIFT, 6, layoutmsg, mfact exact 0.6
 bind = ALT SHIFT, 7, layoutmsg, mfact exact 0.7
+bind = ALT SHIFT, 8, layoutmsg, mfact exact 0.8
+bind = ALT SHIFT, 9, layoutmsg, mfact exact 0.9
+bind = ALT SHIFT, 0, layoutmsg, mfact exact 1.0
 bind = ALT SHIFT, right, layoutmsg, mfact +0.05
 bind = ALT SHIFT, left, layoutmsg, mfact -0.05
 
@@ -168,4 +171,3 @@ bind = ALT SHIFT, K, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfil
 bind = ALT SHIFT, W, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/windowrules/default.conf
 bind = ALT SHIFT, E, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/workspaces/default.conf
 bind = ALT SHIFT, M, exec, nemo ~/dotfiles/.config/hypr/conf/monitors
-
