--- a/dotfiles/.config/hypr/conf/layouts/default.conf
+++ b/dotfiles/.config/hypr/conf/layouts/default.conf
@@ -21,12 +21,12 @@ master {
     allow_small_split = false                 # Enable adding additional master windows in a horizontal split style
     special_scale_factor = 1.0               # The scale of the special workspace windows. [0.0 - 1.0]
     mfact = 0.65                              # The size as a percentage of the master window (e.g., 0.55 means 55% master, 45% slave)
-    new_status = slave                        # New window status: master, slave, or inherit from focused window
+    new_status = master                        # New window status: master, slave, or inherit from focused window
     new_on_top = false                        # Whether a newly opened window should be on the top of the stack
     new_on_active = none                      # Placement of new window: before, after, or none
     orientation = top                        # Default placement of the master area: left, right, top, bottom, or center
     inherit_fullscreen = true                 # Inherit fullscreen status when cycling/swapping to another window
     always_center_master = false              # Keep the master window centered when orientation=center and it's the only window
-    smart_resizing = false                     # Determine resizing direction based on mouse position on the window
+    smart_resizing = true                     # Determine resizing direction based on mouse position on the window
     drop_at_cursor = true                     # Place dragged/dropped windows at cursor position or stack top/bottom
 }
