--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -5,13 +5,10 @@ $WORKSPACE=1
 workspace = $WORKSPACE, name:ide
 workspace = $WORKSPACE, defaultName:ide
 workspace = $WORKSPACE, gapsin:5, gapsout:0
-#workspace = $WORKSPACE, layoutopt:orientation:top
-
 
 
 # workspace 2
 $WORKSPACE=2
-#workspace = $WORKSPACE, layoutopt:orientation:top
 
 
 
@@ -47,7 +44,7 @@ $WORKSPACE=8
 
 # workspace 9
 $WORKSPACE=9
-workspace = $WORKSPACE, layoutopt:orientation:left
+#workspace = $WORKSPACE, layoutopt:orientation:left
 workspace = $WORKSPACE, name:rrss
 workspace = $WORKSPACE, defaultName:rrss
 
