more setup changes

--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -143,6 +143,7 @@ bind = $mainMod SHIFT, F, layoutmsg, focusmaster
 bind = $mainMod SHIFT, F, fullscreen, 0
 
 bind = $mainMod, HOME, exec, sh ~/.config/ml4w/settings/system-monitor.sh
+bind = $mainMod SHIFT, HOME, exec, sh ~/.config/ml4w/settings/system-monitor-alt.sh
 bind = $mainMod, END, exec, sh ~/.config/ml4w/settings/software.sh
 bind = $mainMod, NEXT, layoutmsg, cyclenext
 bind = $mainMod, PRIOR, layoutmsg, cycleprev
@@ -170,4 +171,5 @@ bind = ALT SHIFT, B, layoutmsg, orientationbottom
 bind = ALT SHIFT, K, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/keybindings/default.conf
 bind = ALT SHIFT, W, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/windowrules/default.conf
 bind = ALT SHIFT, E, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/workspaces/default.conf
+bind = ALT SHIFT, G, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/ml4w.conf
 bind = ALT SHIFT, M, exec, nemo ~/dotfiles/.config/hypr/conf/monitors
