--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -75,14 +75,14 @@ $w_class=whatsdesk
 windowrulev2 = float, class:^(.*$w_class)$
 windowrulev2 = center, class:^(.*$w_class)$
 windowrulev2 = size 70% 90%, class:^(.*$w_class)$
-windowrulev2 = move onscreen 15% 0%, class:^(.*$w_class)$
+#windowrulev2 = move onscreen 15% 7%, class:^(.*$w_class)$
 
 #Telegram
 $w_class=telegram
 windowrulev2 = float, class:^(.*$w_class.*)$
 windowrulev2 = center, class:^(.*$w_class.*)$
-windowrulev2 = size 70% 90%, class:^(.*$w_class.*)$
-windowrulev2 = move onscreen 15% 0%, class:^(.*$w_class.*)$
+windowrulev2 = size 80% 90%, class:^(.*$w_class.*)$
+#windowrulev2 = move onscreen 5% 7%, class:^(.*$w_class.*)$
 
 # -------------------------------------------------------------------------
 
