installed pavucontrol-qt as replacement for pavucontrol

--- a/dotfiles/.config/hypr/conf/ml4w.conf
+++ b/dotfiles/.config/hypr/conf/ml4w.conf
@@ -5,10 +5,10 @@
     #                                               
 
     # Pavucontrol floating
-    windowrulev2 = float,class:(.*org.pulseaudio.pavucontrol.*)
-    windowrulev2 = size 700 600,class:(.*org.pulseaudio.pavucontrol.*)
-    windowrulev2 = center,class:(.*org.pulseaudio.pavucontrol.*)
-    windowrulev2 = pin,class:(.*org.pulseaudio.pavucontrol.*)
+    windowrulev2 = float,class:(.*pavucontrol.*)
+    windowrulev2 = size 870 700,class:(.*pavucontrol.*)
+    windowrulev2 = center,class:(.*pavucontrol.*)
+    windowrulev2 = pin,class:(.*org.pavucontrol.*)
 
     # OpenAI ChatGPT floating
     windowrulev2 = float,title:(ChatGPT.*)
