--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -17,7 +17,7 @@ bind = $mainMod, RETURN, togglespecialworkspace
 bind = $mainMod, B, exec, $ML4W_SETTINGS/browser.sh # Open the browser
 
 bind = $mainMod, E, exec, $ML4W_SETTINGS/filemanager.sh # Open the filemanager
-bind = $mainMod SHIFT, E, exec, dolphin
+bind = $mainMod SHIFT, E, exec, $ML4W_SETTINGS/filemanager_alt.sh
 
 
 # Windows
