--- a/dotfiles/.config/hypr/conf/ml4w.conf
+++ b/dotfiles/.config/hypr/conf/ml4w.conf
@@ -8,7 +8,7 @@
     windowrulev2 = float,class:(.*pavucontrol.*)
     windowrulev2 = size 870 700,class:(.*pavucontrol.*)
     windowrulev2 = center,class:(.*pavucontrol.*)
-    windowrulev2 = pin,class:(.*org.pavucontrol.*)
+    #windowrulev2 = pin,class:(.*org.pavucontrol.*)
 
     # OpenAI ChatGPT floating
     windowrulev2 = float,title:(ChatGPT.*)
@@ -20,52 +20,52 @@
     windowrulev2 = float,class:(.*waypaper.*)
     windowrulev2 = size 900 700,class:(.*waypaper.*)
     windowrulev2 = center,class:(.*waypaper.*)
-    windowrulev2 = pin,class:(.*waypaper.*)
+    #windowrulev2 = pin,class:(.*waypaper.*)
 
     # ML4W Welcome App floating
     windowrulev2 = float,class:(com.ml4w.welcome)
     windowrulev2 = size 700 600,class:(com.ml4w.welcome)
     windowrulev2 = center,class:(com.ml4w.welcome)
-    windowrulev2 = pin,class:(com.ml4w.welcome)
+    #windowrulev2 = pin,class:(com.ml4w.welcome)
 
     windowrulev2 = float,class:(ml4w-welcome.py)
     windowrulev2 = size 400 500,class:(ml4w-welcome.py)
     windowrulev2 = center,class:(ml4w-welcome.py)
-    windowrulev2 = pin,class:(ml4w-welcome.py)
+    #windowrulev2 = pin,class:(ml4w-welcome.py)
 
     # ML4W Settings App floating
     windowrulev2 = float,class:(com.ml4w.dotfilessettings)
     windowrulev2 = size 700 600,class:(com.ml4w.dotfilessettings)
     #windowrulev2 = move 10% 20%,class:(com.ml4w.dotfilessettings)
-    windowrulev2 = pin,class:(com.ml4w.dotfilessettings)
+    #windowrulev2 = pin,class:(com.ml4w.dotfilessettings)
     windowrulev2 = center,class:(com.ml4w.dotfilessettings)
 
     windowrulev2 = float,class:(ml4w-dotfiles-settings.py)
     windowrulev2 = size 400 500,class:(ml4w-dotfiles-settings.py)
     #windowrulev2 = move 10% 20%,class:(ml4w-dotfiles-settings.py)
-    windowrulev2 = pin,class:(ml4w-dotfiles-settings.py)
+    #windowrulev2 = pin,class:(ml4w-dotfiles-settings.py)
     windowrulev2 = center,class:(ml4w-dotfiles-settings.py)
 
     # ML4W Hyprland App floating
     windowrulev2 = float,class:(com.ml4w.hyprland.settings)
     windowrulev2 = size 700 600,class:(com.ml4w.hyprland.settings)
     windowrulev2 = center,class:(com.ml4w.hyprland.settings)
-    windowrulev2 = pin,class:(com.ml4w.hyprland.settings)
+    #windowrulev2 = pin,class:(com.ml4w.hyprland.settings)
 
     windowrulev2 = float,class:(ml4w-hyprland-settings.py)
     windowrulev2 = size 700 600,class:(ml4w-hyprland-settings.py)
     windowrulev2 = center,class:(ml4w-hyprland-settings.py)
-    windowrulev2 = pin,class:(ml4w-hyprland-settings.py)
+    #windowrulev2 = pin,class:(ml4w-hyprland-settings.py)
 
     # System Mission Center
     windowrulev2 = float, class:(io.missioncenter.MissionCenter)
-    windowrulev2 = pin, class:(io.missioncenter.MissionCenter)
+    #windowrulev2 = pin, class:(io.missioncenter.MissionCenter)
     windowrulev2 = center, class:(io.missioncenter.MissionCenter)
     windowrulev2 = size 900 600, class:(io.missioncenter.MissionCenter)
 
     # System Mission Center Preference Window
     windowrulev2 = float, class:(missioncenter), title:^(Preferences)$
-    windowrulev2 = pin, class:(missioncenter), title:^(Preferences)$
+    #windowrulev2 = pin, class:(missioncenter), title:^(Preferences)$
     windowrulev2 = center, class:(missioncenter), title:^(Preferences)$
 
     # Gnome Calculator
@@ -75,12 +75,12 @@
 
     # Emoji Picker Smile
     windowrulev2 = float,class:(it.mijorus.smile)
-    windowrulev2 = pin, class:(it.mijorus.smile)
+    #windowrulev2 = pin, class:(it.mijorus.smile)
     windowrulev2 = move 100%-w-40 90,class:(it.mijorus.smile)
 
     # Hyprland Share Picker
     windowrulev2 = float, class:(hyprland-share-picker)
-    windowrulev2 = pin, class:(hyprland-share-picker)
+    #windowrulev2 = pin, class:(hyprland-share-picker)
     windowrulev2 = center, title:class:(hyprland-share-picker)
     windowrulev2 = size 600 400,class:(hyprland-share-picker)
 
@@ -88,14 +88,14 @@
     windowrulev2 = float,class:(dotfiles-floating)
     windowrulev2 = size 1000 700,class:(dotfiles-floating)
     windowrulev2 = center,class:(dotfiles-floating)
-    windowrulev2 = pin, class:(dotfiles-floating)
+    #windowrulev2 = pin, class:(dotfiles-floating)
 
     # Console Utils Window
     $custom_class = console-utils
     windowrulev2 = float, class:($custom_class)
     windowrulev2 = size 95% 85%, class:($custom_class)
     windowrulev2 = center, class:($custom_class)
-    windowrulev2 = pin, class:($custom_class)
+    #windowrulev2 = pin, class:($custom_class)
 
 
     # XDG Desktop Portal
