improve window behavior setups

--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -6,7 +6,6 @@ windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
 windowrule = float,^(qalculate-gtk)$
 
-
 # Browser Picture in Picture
 windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = pin, title:^(Picture-in-Picture)$
@@ -26,8 +25,14 @@ windowrulev2 = fullscreen, class:^(.*Postman.*)$
 windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
 
 
+# Jetbrains IDE
+windowrulev2 = maximize, class:^(jetbrains-.*)$
+windowrulev2 = center, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|p2roject structure)$
 windowrulev2 = maximize, class:^(.*chrome.*)$
 windowrulev2 = maximize, class:^(Brave.*)$
+
+# VSCodium
+windowrulev2 = float, center, class:^(.*codium.*|.*Codium.*), title:^(.*Save .*|.*save .*|.*Open .*|.*open .*)
 
 # desktop portal
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
@@ -97,7 +102,7 @@ windowrulev2 = opaque, class:^(.*codium)$
 
 # workspace 1
 $WORKSPACE=1
-windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$ 
+windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$
 
 
 
