--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -4,7 +4,7 @@
 $WORKSPACE=1
 workspace = $WORKSPACE, name:ide
 workspace = $WORKSPACE, defaultName:ide
-workspace = $WORKSPACE, gapsin:5, gapsout:0
+#workspace = $WORKSPACE, gapsin:5, gapsout:0
 
 
 # workspace 2
