spotify module included on waybar, design changes in the bar

--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -1,10 +1,12 @@
 # reglas de ventana
 
+source = window_types.conf
+
 # default start
-windowrule = float,^(pavucontrol)$
-windowrule = float,^(blueman-manager)$
-windowrule = float,^(nm-connection-editor)$
-windowrule = float,^(qalculate-gtk)$
+windowrulev2 = float, class: ^(pavucontrol)$
+windowrulev2 = float, class: ^(blueman-manager)$
+windowrulev2 = float, class: ^(nm-connection-editor)$
+windowrulev2 = float, class: ^(qalculate-gtk)$
 
 # Browser Picture in Picture
 windowrulev2 = float, title:^(Picture-in-Picture)$
@@ -24,15 +26,27 @@ windowrulev2 = fullscreen, class:^(.*Spotify.*)$
 windowrulev2 = fullscreen, class:^(.*Postman.*)$
 windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
 
+windowrulev2 = float, center, class:^(.*megasync.*)$
+windowrulev2 = size 0 0, class:^(.*megasync.*)$, title:^(.*MEGAsync.*)$
 
-# Jetbrains IDE
-windowrulev2 = maximize, class:^(jetbrains-.*)$
-windowrulev2 = center, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|p2roject structure)$
+windowrulev2 = float, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
+windowrulev2 = center, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
+windowrulev2 = size 0 0, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
+windowrulev2 = float, title:^(.*Welcome.*|.*welcome.*)$
+windowrulev2 = center, title:^(.*Welcome.*|.*welcome.*)$
+windowrulev2 = float, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
+windowrulev2 = center, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
+windowrulev2 = size 0 0, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
+
+#windowrulev2 = maximize, class:^(jetbrains-.*)$
 windowrulev2 = maximize, class:^(.*chrome.*)$
 windowrulev2 = maximize, class:^(Brave.*)$
 
+# se pueden usar dos propiedades o condiciones en una sola linea, pero por orden se separan
 # VSCodium
-windowrulev2 = float, center, class:^(.*codium.*|.*Codium.*), title:^(.*Save .*|.*save .*|.*Open .*|.*open .*)
+windowrulev2 = float, class:^(.*codium.*|.*Codium.*), title:^(.*Save .*|.*save .*|.*Open .*|.*open .*)
+windowrulev2 = center, class:^(.*codium.*|.*Codium.*), title:^(.*Save .*|.*save .*|.*Open .*|.*open .*)
+windowrulev2 = size 50% 70%, class:^(.*codium.*|.*Codium.*), title:^(.*Save .*|.*save .*|.*Open .*|.*open .*)
 
 # desktop portal
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
