more improvements for exotic simple theme

--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -22,18 +22,20 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 #windowrulev2 = fullscreen, class:^(kitty)$
 #windowrulev2 = fullscreen, class:^(whatsdesk)$
 #windowrulev2 = fullscreen, class:^(.*telegram.*)$
-windowrulev2 = fullscreen, class:^(.*Spotify.*)$
+#windowrulev2 = fullscreen, class:^(.*Spotify.*)$
 windowrulev2 = fullscreen, class:^(.*Postman.*)$
 windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
 
 windowrulev2 = float, center, class:^(.*megasync.*)$
 windowrulev2 = size 0 0, class:^(.*megasync.*)$, title:^(.*MEGAsync.*)$
 
-windowrulev2 = float, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
-windowrulev2 = center, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
-windowrulev2 = size 0 0, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
+windowrulev2 = float, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
+windowrulev2 = center, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
+windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
+
 windowrulev2 = float, title:^(.*Welcome.*|.*welcome.*)$
 windowrulev2 = center, title:^(.*Welcome.*|.*welcome.*)$
+
 windowrulev2 = float, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
 windowrulev2 = center, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
 windowrulev2 = size 0 0, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
