--- a/dotfiles/.config/waybar/themes/exotic-modern-simple/config
+++ b/dotfiles/.config/waybar/themes/exotic-modern-simple/config
@@ -43,13 +43,14 @@
     "modules-right": [
         //"custom/updates",
         "group/hardware",
+        "group/tools",
+        "tray",
         "pulseaudio",
+        //"pulseaudio/slider",
         //"backlight",
         "bluetooth",
         "battery",
-        "tray",
         "network",
-        "group/tools",
         "custom/ml4w-welcome",
         "hyprland/language",   
         "clock",    	
