--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -52,7 +52,8 @@ workspace = $WORKSPACE, defaultName:rrss
 
 # workspace 10
 $WORKSPACE=10
-
+workspace = $WORKSPACE, gapsin:5, gapsout:0
+workspace = $WORKSPACE, rounding:false
 
 
 # workspace special
