new exotic simple themes included

--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -4,8 +4,8 @@
 $WORKSPACE=1
 workspace = $WORKSPACE, name:ide
 workspace = $WORKSPACE, defaultName:ide
-#workspace = $WORKSPACE, gapsin:5, gapsout:0
-
+workspace = $WORKSPACE, gapsin:0, gapsout:0
+workspace = $WORKSPACE, rounding:false
 
 # workspace 2
 $WORKSPACE=2
