--- a/dotfiles/.config/hypr/conf/windows/custom.conf
+++ b/dotfiles/.config/hypr/conf/windows/custom.conf
@@ -1,10 +1,10 @@
 # layout
 general {
-    gaps_in = 10
-    gaps_out = 14
-    border_size = 2
-    col.active_border = $color11
-    col.inactive_border = rgba(ffffffff)
+#    gaps_in = 10
+#    gaps_out = 14
+#    border_size = 2
+#    col.active_border = $color11
+#    col.inactive_border = rgba(ffffffff)
     layout = master
     #layout = dwindle
     #layout = hy3
