add megasync to autostart

--- a/dotfiles/.config/hypr/conf/autostart.conf
+++ b/dotfiles/.config/hypr/conf/autostart.conf
@@ -52,3 +52,5 @@ exec-once = hyprpm reload -n &
 #exec = sh ~/.config/hypr/scripts/hyprshade.sh
 
 #exec-once = [workspace special silent] $(cat $ML4W_SETTINGS/terminal.sh)
+
+exec-once = megasync &
