autostart with custom script

--- a/dotfiles/.config/hypr/conf/autostart.conf
+++ b/dotfiles/.config/hypr/conf/autostart.conf
@@ -53,4 +53,4 @@ exec-once = hyprpm reload -n &
 
 #exec-once = [workspace special silent] $(cat $ML4W_SETTINGS/terminal.sh)
 
-exec-once = megasync &
+exec-once = sh ~/hyprland-setup/scripts/autostart.sh
