many changes and new rules

--- a/dotfiles/.config/hypr/conf/monitors/1920x1080@60.conf
+++ b/dotfiles/.config/hypr/conf/monitors/1920x1080@60.conf
@@ -6,9 +6,9 @@
 monitor=,1920x1080@60,auto,1.25
 
 # unscale XWayland
-xwayland {
-  force_zero_scaling = true
-}
+#xwayland {
+#  force_zero_scaling = true
+#}
 
 # toolkit-specific scale
 env = GDK_SCALE,1.25
