--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -22,7 +22,7 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 #windowrulev2 = fullscreen, class:^(kitty)$
 #windowrulev2 = fullscreen, class:^(whatsdesk)$
 #windowrulev2 = fullscreen, class:^(.*telegram.*)$
-#windowrulev2 = fullscreen, class:^(.*Spotify.*)$
+windowrulev2 = maximize, class:^(.*Spotify.*)$
 windowrulev2 = fullscreen, class:^(.*Postman.*)$
 windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
 
