--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -1,11 +1,12 @@
 # reglas de workspace
 
+workspace = f[1], gapsout:0, gapsin:0, border:false, rounding:false
+
+
 # workspace 1
 $WORKSPACE=1
 workspace = $WORKSPACE, name:ide
 workspace = $WORKSPACE, defaultName:ide
-workspace = $WORKSPACE, gapsin:0, gapsout:0
-workspace = $WORKSPACE, rounding:false
 
 # workspace 2
 $WORKSPACE=2
@@ -44,7 +45,6 @@ $WORKSPACE=8
 
 # workspace 9
 $WORKSPACE=9
-#workspace = $WORKSPACE, layoutopt:orientation:left
 workspace = $WORKSPACE, name:rrss
 workspace = $WORKSPACE, defaultName:rrss
 
@@ -52,15 +52,11 @@ workspace = $WORKSPACE, defaultName:rrss
 
 # workspace 10
 $WORKSPACE=10
-workspace = $WORKSPACE, gapsin:5, gapsout:0
-workspace = $WORKSPACE, rounding:false
+
+
 
 
 # workspace special
 $WORKSPACE=special:special
 workspace = $WORKSPACE, layoutopt:orientation:left
-#workspace = $WORKSPACE, border:true
-#workspace = $WORKSPACE, shadow:true
-#workspace = $WORKSPACE, decorate:true
-#workspace = $WORKSPACE, rounding:true
 workspace = $WORKSPACE, on-created-empty: kitty
