fix mater layout rule

--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -107,7 +107,7 @@ bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiqu
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition 
 bind = $mainMod, F2, exec, postman
 bind = $mainMod SHIFT, F9, exec, telegram-desktop
-bind = $mainMod, F9, exec, whatsdesk
+bind = $mainMod, F9, exec, whatsdesk --ozone-platform-hint=auto
 bind = $mainMod, F10, exec, spotify
 bind = $mainMod SHIFT, B, exec, brave
 
