--- a/dotfiles/.config/hypr/conf/layouts/default.conf
+++ b/dotfiles/.config/hypr/conf/layouts/default.conf
@@ -26,7 +26,7 @@ master {
     new_on_active = none                      # Placement of new window: before, after, or none
     orientation = top                        # Default placement of the master area: left, right, top, bottom, or center
     inherit_fullscreen = true                 # Inherit fullscreen status when cycling/swapping to another window
-    always_center_master = false              # Keep the master window centered when orientation=center and it's the only window
+    slave_count_for_center_master = 2         # when using orientation=center, make the master window centered only when at least this many slave windows are open.
     smart_resizing = true                     # Determine resizing direction based on mouse position on the window
     drop_at_cursor = true                     # Place dragged/dropped windows at cursor position or stack top/bottom
 }
