--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -20,8 +20,8 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 # ------------------------------------------------------------------------
 # tipos de visualizacion
 #windowrulev2 = fullscreen, class:^(kitty)$
-#windowrulev2 = fullscreen, class:^(whatsdesk)$
-#windowrulev2 = fullscreen, class:^(.*telegram.*)$
+windowrulev2 = maximize, class:^(whatsdesk)$
+windowrulev2 = maximize, class:^(.*telegram.*)$
 windowrulev2 = maximize, class:^(.*Spotify.*)$
 windowrulev2 = fullscreen, class:^(.*Postman.*)$
 windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
@@ -92,17 +92,17 @@ windowrulev2 = size 50% 80%, class:^(.*$w_class)$
 
 
 #Whatsdesk
-$w_class=whatsdesk
-windowrulev2 = float, class:^(.*$w_class)$
-windowrulev2 = center, class:^(.*$w_class)$
-windowrulev2 = size 70% 90%, class:^(.*$w_class)$
+#$w_class=whatsdesk
+#windowrulev2 = float, class:^(.*$w_class)$
+#windowrulev2 = center, class:^(.*$w_class)$
+#windowrulev2 = size 70% 90%, class:^(.*$w_class)$
 #windowrulev2 = move onscreen 15% 7%, class:^(.*$w_class)$
 
 #Telegram
-$w_class=telegram
-windowrulev2 = float, class:^(.*$w_class.*)$
-windowrulev2 = center, class:^(.*$w_class.*)$
-windowrulev2 = size 80% 90%, class:^(.*$w_class.*)$
+#$w_class=telegram
+#windowrulev2 = float, class:^(.*$w_class.*)$
+#windowrulev2 = center, class:^(.*$w_class.*)$
+#windowrulev2 = size 80% 90%, class:^(.*$w_class.*)$
 #windowrulev2 = move onscreen 5% 7%, class:^(.*$w_class.*)$
 
 # -------------------------------------------------------------------------
