new rule for properties window

--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -63,6 +63,11 @@ windowrulev2 = size 50% 80%, class:^(org.kde.ark)$
 windowrulev2 = float, class:^(.*FileRoller)$
 windowrulev2 = center, class:^(.*FileRoller)$
 
+# nemo properties
+windowrulev2 = float, center, class:^(.*nemo)$, title:^(Propiedades de.*|Properties .*)$
+windowrulev2 = size 50% 80%, class:^(.*nemo)$, title:^(Propiedades de.*|Properties .*)$
+
+
 # Gnome Calendar
 windowrulev2 = float, class:^(.*Calendar)$
 windowrulev2 = center, class:^(.*Calendar)$
