--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -106,6 +106,7 @@ bind = $mainMod, L, exec, hyprlock # Lock screen
 bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiquarium
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition 
 bind = $mainMod, F2, exec, postman
+bind = ALT, F2, exec, httpie-desktop --ozone-platform-hint=auto
 bind = $mainMod SHIFT, F9, exec, telegram-desktop
 bind = $mainMod, F9, exec, whatsdesk --ozone-platform-hint=auto
 bind = $mainMod, F10, exec, spotify
