--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -29,9 +29,12 @@ windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
 windowrulev2 = float, center, class:^(.*megasync.*)$
 windowrulev2 = size 0 0, class:^(.*megasync.*)$, title:^(.*MEGAsync.*)$
 
-windowrulev2 = float, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
-windowrulev2 = center, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
-windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure)$
+windowrulev2 = float, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure|New Project|new project)$
+windowrulev2 = center, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure|New Project|new project)$
+windowrulev2 = size 900 749, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*)$
+windowrulev2 = size 1106 664, class:^(jetbrains-.*)$, title:^(Project Structure|project structure)$
+windowrulev2 = size 877 703, class:^(jetbrains-.*)$, title:^(New Project|new project)$
+
 
 windowrulev2 = float, title:^(.*Welcome.*|.*welcome.*)$
 windowrulev2 = center, title:^(.*Welcome.*|.*welcome.*)$
